# headtexturefixer

./: .gitignore  Cargo.toml  LICENSE.md  README.md  pom.xml
.github/workflows/: build.yml
native/: Cargo.toml
native/src/: lib.rs
src/: lib.rs
src/main/java/: xyz_holocons_mc_headtexturefixer_Native.h
src/main/java/xyz/holocons/mc/headtexturefixer/: HeadTextureFixerPlugin.java  Native.java  PaperPlugin.java
src/main/resources/: config.yml  paper-plugin.yml  plugin.yml
