[package]
name = "headtexturefixer_native"
version = "0.1.0"
authors = ["Derek Lee <dlee13>"]
edition = "2021"
publish = false

[dependencies]
base64 = "0.13"
jni = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate_type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1
