[package]
name = "normalize_texture"
version = "0.1.0"
authors = ["Derek Lee <dlee13>"]
edition = "2021"
publish = false

[dependencies]
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1
